finalizando archivos en faq/

--- a/faq/extending.po
+++ b/faq/extending.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-02 11:16+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es_AR\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es_AR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/faq/extending.rst:3
@@ -452,7 +452,6 @@ msgstr ""
 "personalizada."
 
 #: ../Doc/faq/extending.rst:276
-#, fuzzy
 msgid ""
 "However sometimes you have to run the embedded Python interpreter in the "
 "same thread as your rest application and you can't allow the :c:func:"
@@ -466,15 +465,18 @@ msgid ""
 "using the GNU readline library (you may want to ignore **SIGINT** while "
 "calling readline())::"
 msgstr ""
-"Otra solución es intentar compilar la cadena de caracteres recibida con :c:"
-"func:`Py_CompileString`. Si compila sin errores, intenta ejecutar el objeto "
-"código retornado llamando a :c:func:`PyEval_EvalCode`. De otra manera salva "
-"el ingreso para después. Si la compilación falla, encuentra si hay algún o "
-"si necesita algún ingreso adicional - extrayendo la cadena de caracteres "
-"mensaje de la tupla excepción y comparándola con la cadena de caracteres "
-"\"unexpected EOF while parsing\". Aquí hay un ejemplo completo usando la "
-"biblioteca *GNU readline* (Seguramente querrás ignorar **SIGINT** mientras "
-"llamas a readline())::"
+"Sin embargo, a veces debe ejecutar el intérprete de Python integrado en el "
+"mismo hilo que su aplicación de descanso y no puede permitir que el :c:func:"
+"`PyRun_InteractiveLoop` se detenga mientras espera la entrada del usuario. "
+"Una solución es intentar compilar la cadena recibida con :c:func:"
+"`Py_CompileString`. Si se compila sin errores, intente ejecutar el objeto de "
+"código devuelto llamando a :c:func:`PyEval_EvalCode`. De lo contrario, "
+"guarde la entrada para más tarde. Si la compilación falla, averigüe si es un "
+"error o simplemente se requiere más entrada, extrayendo la cadena del "
+"mensaje de la tupla de excepción y comparándola con la cadena \"EOF "
+"inesperado durante el análisis\". Aquí hay un ejemplo completo usando la "
+"biblioteca de línea de lectura de GNU (es posible que desee ignorar "
+"**SIGINT** mientras llama a readline ()):"
 
 #: ../Doc/faq/extending.rst:401
 msgid "How do I find undefined g++ symbols __builtin_new or __pure_virtual?"
