--- a/faq/general.po
+++ b/faq/general.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-02 11:14+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/faq/general.rst:5
@@ -248,7 +248,6 @@ msgstr ""
 "se puede aplicar a muchas clases diferentes de problemas."
 
 #: ../Doc/faq/general.rst:114
-#, fuzzy
 msgid ""
 "The language comes with a large standard library that covers areas such as "
 "string processing (regular expressions, Unicode, calculating differences "
@@ -260,17 +259,16 @@ msgid ""
 "party extensions are also available.  Consult `the Python Package Index "
 "<https://pypi.org>`_ to find packages of interest to you."
 msgstr ""
-"El lenguaje viene con una vasta biblioteca estándar que cubre áreas como el "
-"procesamiento de texto (expresiones regulares, Unicode, cálculo de "
+"El lenguaje viene con una gran biblioteca estándar que cubre áreas como "
+"procesamiento de cadenas (expresiones regulares, Unicode, cálculo de "
 "diferencias entre archivos), protocolos de Internet (HTTP, FTP, SMTP, XML-"
-"RPC, POP, IMAP, programación CGI), ingeniería de software (pruebas "
-"unitarias, logging, perfilamiento, análisis sintáctico y gramatical de "
-"código Python) e interfaces con el sistema operativo (llamadas a sistema, "
-"sistemas de archivo, sockets TCP/IP). Mira la tabla de contenidos en :ref:"
-"`library-index` para tener una idea de qué está disponible. Una amplia "
-"variedad de extensiones de terceros también están disponibles. Consulta el "
-"`Python Package Index <https://pypi.org>`_ para encontrar paquetes de tu "
-"interés."
+"RPC, POP, IMAP, programación CGI), ingeniería de software. (pruebas "
+"unitarias, registro, creación de perfiles, análisis de código Python) e "
+"interfaces del sistema operativo (llamadas al sistema, sistemas de archivos, "
+"sockets TCP / IP). Mire la tabla de contenido de :ref:`library-index` para "
+"tener una idea de lo que está disponible. También hay disponible una amplia "
+"variedad de extensiones de terceros. Consulte `the Python Package Index "
+"<https://pypi.org>`_ para encontrar paquetes de su interés."
 
 #: ../Doc/faq/general.rst:126
 msgid "How does the Python version numbering scheme work?"
