--- a/faq/installed.po
+++ b/faq/installed.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2020-05-11 11:19-0500\n"
 "Last-Translator: \n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/faq/installed.rst:3
@@ -96,15 +96,14 @@ msgstr ""
 "administrativas de HP/Compaq están escritas en Python."
 
 #: ../Doc/faq/installed.rst:32
-#, fuzzy
 msgid ""
 "Many Unix-compatible operating systems, such as macOS and some Linux "
 "distributions, have Python installed by default; it's included in the base "
 "installation."
 msgstr ""
-"Muchos sistemas operativos compatibles con Unix, como Mac OS X y algunas "
-"distribuciones de Linux, tienen Python instalado por defecto; está incluido "
-"en la instalación base."
+"Muchos sistemas operativos compatibles con Unix, como macOS y algunas "
+"distribuciones de Linux, tienen Python instalado de forma predeterminada; "
+"está incluido en la instalación básica."
 
 #: ../Doc/faq/installed.rst:38
 msgid "Can I delete Python?"
