--- a/faq/library.po
+++ b/faq/library.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-02 11:09+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/faq/library.rst:5
@@ -49,17 +49,16 @@ msgstr ""
 "paso.)"
 
 #: ../Doc/faq/library.rst:21
-#, fuzzy
 msgid ""
 "For third-party packages, search the `Python Package Index <https://pypi."
 "org>`_ or try `Google <https://www.google.com>`_ or another web search "
 "engine.  Searching for \"Python\" plus a keyword or two for your topic of "
 "interest will usually find something helpful."
 msgstr ""
-"Para los paquetes de terceros, busque en el `Índice de Paquetes de Python "
-"<https://pypi.org>`_ o pruebe `Google <https://www.google.com>`_ u otro "
-"motor de búsqueda. Buscando por \"Python\" más una o dos palabras clave del "
-"tema de interés, generalmente encontrará algo útil."
+"Para paquetes de terceros, busque `Python Package Index <https://pypi.org>`_ "
+"o pruebe `Google <https://www.google.com>`_ u otro motor de búsqueda web. La "
+"búsqueda de \"Python\" más una palabra clave o dos para su tema de interés "
+"generalmente encontrará algo útil."
 
 #: ../Doc/faq/library.rst:28
 msgid "Where is the math.py (socket.py, regex.py, etc.) source file?"
