--- a/bugs.po
+++ b/bugs.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2020-06-28 01:03+0200\n"
 "Last-Translator: \n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/bugs.rst:5
@@ -117,16 +117,15 @@ msgid "Using the Python issue tracker"
 msgstr "Utilizar el issue tracker de Python"
 
 #: ../Doc/bugs.rst:43
-#, fuzzy
 msgid ""
 "Bug reports for Python itself should be submitted via the Python Bug Tracker "
 "(https://bugs.python.org/).  The bug tracker offers a web form which allows "
 "pertinent information to be entered and submitted to the developers."
 msgstr ""
-"Los informes de errores para Python deben enviarse mediante el Python Bug "
-"Tracker (https://bugs.python.org/).  El rastreador de errores ofrece un "
-"formulario Web donde se puede introducir y enviar la información pertinente "
-"a los desarrolladores."
+"Los informes de errores para Python en sí deben enviarse a través de Python "
+"Bug Tracker (https://bugs.python.org/). El rastreador de errores ofrece un "
+"formulario web que permite ingresar y enviar la información pertinente a los "
+"desarrolladores."
 
 #: ../Doc/bugs.rst:47
 msgid ""
@@ -221,13 +220,12 @@ msgstr ""
 "tipo de información es útil y por qué lo es."
 
 #: ../Doc/bugs.rst:84
-#, fuzzy
 msgid ""
 "`Bug Writing Guidelines <https://bugzilla.mozilla.org/page.cgi?id=bug-"
 "writing.html>`_"
 msgstr ""
-"`Guía para describir un error <https://developer.mozilla.org/es/docs/QA/"
-"Bug_writing_guidelines>`_"
+"`Bug Writing Guidelines <https://bugzilla.mozilla.org/page.cgi?id=bug-"
+"writing.html>`_"
 
 #: ../Doc/bugs.rst:84
 msgid ""
