finalizando archivos en howto/

--- a/howto/instrumentation.po
+++ b/howto/instrumentation.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-04 17:42+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/howto/instrumentation.rst:7
@@ -107,11 +107,12 @@ msgid "or::"
 msgstr "o::"
 
 #: ../Doc/howto/instrumentation.rst:49
-#, fuzzy
 msgid ""
 "CPython must then be :option:`configured with the --with-dtrace option <--"
 "with-dtrace>`:"
-msgstr "Luego, CPython debe configurarse ``--with-dtrace``:"
+msgstr ""
+"CPython debe ser :option:`configured with the --with-dtrace option <--with-"
+"dtrace>`:"
 
 #: ../Doc/howto/instrumentation.rst:56
 msgid ""
@@ -133,14 +134,14 @@ msgstr ""
 "stapsdt\"."
 
 #: ../Doc/howto/instrumentation.rst:81
-#, fuzzy
 msgid ""
 "If you've built Python as a shared library (with the :option:`--enable-"
 "shared` configure option), you need to look instead within the shared "
 "library.  For example::"
 msgstr ""
-"Si ha creado Python como una biblioteca compartida (con --enable-shared), "
-"debe buscar en la biblioteca compartida. Por ejemplo::"
+"Si ha creado Python como una biblioteca compartida (con la opción de "
+"configuración :option:`--enable-shared`), debe buscar en la biblioteca "
+"compartida. Por ejemplo::"
 
 #: ../Doc/howto/instrumentation.rst:88
 msgid "Sufficiently modern readelf can print the metadata::"
@@ -229,24 +230,23 @@ msgstr ""
 "script."
 
 #: ../Doc/howto/instrumentation.rst:257
-#, fuzzy
 msgid ""
 "For a :option:`--enable-shared` build of CPython, the markers are contained "
 "within the libpython shared library, and the probe's dotted path needs to "
 "reflect this. For example, this line from the above example:"
 msgstr ""
-"Para una compilación `--enable-shared` de CPython, los marcadores están "
-"contenidos dentro de la biblioteca compartida libpython, y la ruta de puntos "
-"de la sonda debe reflejar esto. Por ejemplo, esta línea del ejemplo anterior:"
+"Para una compilación :option:`--enable-shared` de CPython, los marcadores "
+"están contenidos dentro de la biblioteca compartida libpython, y la ruta de "
+"puntos de la sonda debe reflejar esto. Por ejemplo, esta línea del ejemplo "
+"anterior:"
 
 #: ../Doc/howto/instrumentation.rst:265
 msgid "should instead read:"
 msgstr "en su lugar debería leer:"
 
 #: ../Doc/howto/instrumentation.rst:271
-#, fuzzy
 msgid "(assuming a :ref:`debug build <debug-build>` of CPython 3.6)"
-msgstr "(asumiendo una compilación de depuración de CPython 3.6)"
+msgstr "(asumiendo un :ref:`debug build <debug-build>` de CPython 3.6)"
 
 #: ../Doc/howto/instrumentation.rst:275
 msgid "Available static markers"
