--- a/howto/ipaddress.po
+++ b/howto/ipaddress.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2020-10-06 15:28-0300\n"
 "Last-Translator: \n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/howto/ipaddress.rst:9
@@ -74,7 +74,6 @@ msgid "A Note on IP Versions"
 msgstr "Nota sobre versiones IP"
 
 #: ../Doc/howto/ipaddress.rst:34
-#, fuzzy
 msgid ""
 "For readers that aren't particularly familiar with IP addressing, it's "
 "important to know that the Internet Protocol (IP) is currently in the "
@@ -85,12 +84,12 @@ msgid ""
 "internet."
 msgstr ""
 "Para los lectores que no están particularmente familiarizados con el "
-"direccionamiento IP, es importante saber que el Protocolo de Internet está "
-"actualmente en el proceso de pasar de la versión 4 del protocolo a la "
-"versión 6. Esta transición se está produciendo en gran parte porque la "
-"versión 4 del protocolo no proporciona suficientes direcciones para manejar "
-"las necesidades de todo el mundo, especialmente dado el creciente número de "
-"dispositivos con conexiones directas a Internet."
+"direccionamiento IP, es importante saber que el Protocolo de Internet (IP) "
+"se encuentra actualmente en el proceso de pasar de la versión 4 del "
+"protocolo a la versión 6. Esta transición se produce en gran parte porque la "
+"versión 4 del El protocolo no proporciona suficientes direcciones para "
+"satisfacer las necesidades de todo el mundo, especialmente dado el creciente "
+"número de dispositivos con conexiones directas a Internet."
 
 #: ../Doc/howto/ipaddress.rst:41
 msgid ""
