--- a/howto/pyporting.po
+++ b/howto/pyporting.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-12 20:30+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/howto/pyporting.rst:5
@@ -67,13 +67,12 @@ msgstr ""
 "artículo de Brett Cannon `Why Python 3 exists`_."
 
 #: ../Doc/howto/pyporting.rst:24
-#, fuzzy
 msgid ""
 "For help with porting, you can view the archived python-porting_ mailing "
 "list."
 msgstr ""
-"Para obtener ayuda con la migración, puede enviar un correo electrónico a la "
-"lista de correo de python-porting_ con preguntas."
+"Para obtener ayuda con la portabilidad, puede ver la lista de correo "
+"archivada de python-porting_."
 
 #: ../Doc/howto/pyporting.rst:27
 msgid "The Short Explanation"
