--- a/howto/argparse.po
+++ b/howto/argparse.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-04 20:34+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/howto/argparse.rst:3
@@ -427,13 +427,12 @@ msgstr ""
 "``python --help``)::"
 
 #: ../Doc/howto/argparse.rst:470
-#, fuzzy
 msgid ""
 "We have introduced another action, \"count\", to count the number of "
 "occurrences of specific options."
 msgstr ""
-"Hemos introducido otra acción, ``\"count\"``, para contar el numero de "
-"ocurrencias de un argumento opcional específico:"
+"Hemos introducido otra acción, \"contar\", para contar el número de "
+"apariciones de opciones específicas."
 
 #: ../Doc/howto/argparse.rst:499
 msgid ""
