--- a/howto/sorting.po
+++ b/howto/sorting.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-04 17:32+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/howto/sorting.rst:4
@@ -64,13 +64,12 @@ msgid "Sorting Basics"
 msgstr "Conceptos básicos de ordenación"
 
 #: ../Doc/howto/sorting.rst:20
-#, fuzzy
 msgid ""
 "A simple ascending sort is very easy: just call the :func:`sorted` function. "
 "It returns a new sorted list:"
 msgstr ""
-"Una simple ordenación ascendente es muy fácil: simplemente llame a la "
-"función :func:`sorted`. Retorna una nueva lista ordenada:"
+"Una clasificación ascendente simple es muy fácil: simplemente llame a la "
+"función :func:`sorted`. Devuelve una nueva lista ordenada:"
 
 #: ../Doc/howto/sorting.rst:28
 msgid ""
@@ -373,16 +372,14 @@ msgid "Or you can reverse the order of comparison with:"
 msgstr "O puede revertir el orden de comparación con:"
 
 #: ../Doc/howto/sorting.rst:263
-#, fuzzy
 msgid ""
 "When porting code from Python 2.x to 3.x, the situation can arise when you "
 "have the user supplying a comparison function and you need to convert that "
 "to a key function. The following wrapper makes that easy to do:"
 msgstr ""
-"Al migrar código de Python 2.x a 3.x, pueden surgir problemas cuando los "
-"usuarios proporcionan una función de comparación y es necesario convertir "
-"esta función en una función clave. El siguiente paquete hace que sea fácil "
-"de hacer:"
+"Al migrar código de Python 2.x a 3.x, la situación puede surgir cuando el "
+"usuario proporciona una función de comparación y necesita convertirla en una "
+"función clave. La siguiente envoltura lo hace fácil de hacer:"
 
 #: ../Doc/howto/sorting.rst:294
 msgid "To convert to a key function, just wrap the old comparison function:"
@@ -423,16 +420,15 @@ msgstr ""
 "incorporada :func:`reversed` dos veces:"
 
 #: ../Doc/howto/sorting.rst:328
-#, fuzzy
 msgid ""
 "The sort routines are guaranteed to use :meth:`__lt__` when making "
 "comparisons between two objects. So, it is easy to add a standard sort order "
 "to a class by defining an :meth:`__lt__` method:"
 msgstr ""
-"Las rutinas de ordenación están garantizadas para usar :meth:`__lt__` al "
-"hacer comparaciones entre dos objetos. Por lo tanto, es fácil agregar un "
+"Se garantiza que las rutinas de clasificación utilizarán :meth:`__lt__` al "
+"realizar comparaciones entre dos objetos. Por lo tanto, es fácil agregar un "
 "orden de clasificación estándar a una clase definiendo un método :meth:"
-"`__lt__` ::"
+"`__lt__`:"
 
 #: ../Doc/howto/sorting.rst:338
 msgid ""
