--- a/howto/unicode.po
+++ b/howto/unicode.po
@@ -13,13 +13,13 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-04 20:36+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es (https://mail.python.org/mailman3/lists/docs-es."
 "python.org)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/howto/unicode.rst:5
@@ -1014,7 +1014,6 @@ msgid "Unicode filenames"
 msgstr "Nombres de archivos Unicode"
 
 #: ../Doc/howto/unicode.rst:606
-#, fuzzy
 msgid ""
 "Most of the operating systems in common use today support filenames that "
 "contain arbitrary Unicode characters.  Usually this is implemented by "
@@ -1026,15 +1025,16 @@ msgid ""
 "``LANG`` or ``LC_CTYPE`` environment variables; if you haven't, the default "
 "encoding is again UTF-8."
 msgstr ""
-"La mayoría de los sistemas operativos de uso común hoy en día admiten "
+"La mayoría de los sistemas operativos de uso común en la actualidad admiten "
 "nombres de archivo que contienen caracteres Unicode arbitrarios. Por lo "
-"general, esto se implementa convirtiendo la cadena Unicode en alguna "
-"codificación que varía según el sistema. Hoy Python está convergiendo sobre "
-"el uso de UTF-8: Python en MacOS ha usado UTF-8 para varias versiones, y "
-"Python 3.6 también cambió a usar UTF-8 en Windows. En los sistemas Unix, "
-"solo habrá una codificación del sistema de archivos si ha configurado las "
-"variables de entorno ``LANG`` o ``LC_CTYPE``; si no lo ha hecho, la "
-"codificación predeterminada es nuevamente UTF-8."
+"general, esto se implementa convirtiendo la cadena Unicode en una "
+"codificación que varía según el sistema. Hoy Python está convergiendo en el "
+"uso de UTF-8: Python en MacOS ha usado UTF-8 para varias versiones, y Python "
+"3.6 también ha cambiado a usar UTF-8 en Windows. En los sistemas Unix, solo "
+"habrá un :term:`filesystem encoding <filesystem encoding and error "
+"handler>`. si ha configurado las variables de entorno ``LANG`` o "
+"``LC_CTYPE``; si no lo ha hecho, la codificación predeterminada es "
+"nuevamente UTF-8."
 
 #: ../Doc/howto/unicode.rst:616
 msgid ""
@@ -1060,7 +1060,6 @@ msgstr ""
 "nombres de archivo Unicode."
 
 #: ../Doc/howto/unicode.rst:629
-#, fuzzy
 msgid ""
 "The :func:`os.listdir` function returns filenames, which raises an issue: "
 "should it return the Unicode version of filenames, or should it return bytes "
@@ -1072,16 +1071,16 @@ msgid ""
 "assuming the default :term:`filesystem encoding <filesystem encoding and "
 "error handler>` is UTF-8, running the following program::"
 msgstr ""
-"La función :func:`os.listdir` retorna nombres de archivo, lo que plantea un "
-"problema: ¿debería retornar la versión Unicode de los nombres de archivo, o "
-"debería retornar bytes que contienen las versiones codificadas? :func:`os."
+"La función :func:`os.listdir` devuelve nombres de archivo, lo que plantea un "
+"problema: ¿debería devolver la versión Unicode de los nombres de archivo o "
+"debería devolver bytes que contienen las versiones codificadas? :func:`os."
 "listdir` puede hacer ambas cosas, dependiendo de si proporcionó la ruta del "
 "directorio como bytes o una cadena Unicode. Si pasa una cadena Unicode como "
 "ruta, los nombres de archivo se decodificarán utilizando la codificación del "
-"sistema de archivos y se retornará una lista de cadenas Unicode, mientras "
-"que al pasar una ruta de bytes se retornarán los nombres de archivo como "
-"bytes. Por ejemplo, suponiendo que la codificación predeterminada del "
-"sistema de archivos es UTF-8, ejecutando el siguiente programa::"
+"sistema de archivos y se devolverá una lista de cadenas Unicode, mientras "
+"que pasar una ruta de bytes devolverá los nombres de archivo como bytes. Por "
+"ejemplo, suponiendo que el :term:`filesystem encoding <filesystem encoding "
+"and error handler>` predeterminado es UTF-8, ejecute el siguiente programa:"
 
 #: ../Doc/howto/unicode.rst:647
 msgid "will produce the following output:"
