--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -2160,7 +2160,7 @@ msgstr ""
 "Si :meth:`__new__` es invocado durante la construcción del objeto y éste "
 "retorna una instancia de *cls*, entonces el nuevo método :meth:`__init__` de "
 "la instancia será invocado como ``__init__(self[, …])``, donde *self* es la "
-"nueva instancia y los argumentos restantes son iguales como fueron pasados "
+"nueva instancia y los argumentos restantes son iguales a como fueron pasados "
 "hacia el constructor de objetos."
 
 #: ../Doc/reference/datamodel.rst:1243
