--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -1512,7 +1512,7 @@ msgstr "El nombre de la clase."
 
 #: ../Doc/reference/datamodel.rst:846
 msgid "The name of the module in which the class was defined."
-msgstr "El nombre del módulo en el que se definió la función."
+msgstr "El nombre del módulo en el que se definió la clase."
 
 #: ../Doc/reference/datamodel.rst:849
 msgid "The dictionary containing the class's namespace."
