--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -1380,8 +1380,7 @@ msgstr "El nombre del módulo."
 #: ../Doc/reference/datamodel.rst:760
 msgid "The module's documentation string, or ``None`` if unavailable."
 msgstr ""
-"El texto de documentación del módulo, o ``None`` si no está disponible; no "
-"heredado por subclases."
+"El texto de documentación del módulo, o ``None`` si no está disponible."
 
 #: ../Doc/reference/datamodel.rst:770
 msgid ":attr:`__file__`"
