--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-12-09 23:27-0300\n"
+"PO-Revision-Date: 2021-12-09 23:35-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
@@ -4494,8 +4494,8 @@ msgid ""
 "*__match_args__*; if it is larger, the pattern match attempt will raise a :"
 "exc:`TypeError`."
 msgstr ""
-"Por ejemplo, si ``MyClass.__match_args__`` es ``(\"izquierda\", \"centro\", "
-"\"derecha\")`` eso significa que ``case MyClass(x, y)`` es equivalente a "
+"Por ejemplo, si ``MyClass.__match_args__`` es ``(\"left\", \"center\", "
+"\"right\")`` eso significa que ``case MyClass(x, y)`` es equivalente a "
 "``case MyClass(left=x, center=y)``. Ten en cuenta que el número de "
 "argumentos en el patrón debe ser menor o igual que el número de elementos en "
 "*__match_args__*; si es más grande, el intento de coincidencia de patrón "
