--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -4502,7 +4502,7 @@ msgstr ""
 
 #: ../Doc/reference/datamodel.rst:2626
 msgid ":pep:`634` - Structural Pattern Matching"
-msgstr ":pep:'634' - Coincidencia de patrones estructurales"
+msgstr ":pep:`634` - Coincidencia de patrones estructurales"
 
 #: ../Doc/reference/datamodel.rst:2627
 msgid "The specification for the Python ``match`` statement."
