--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 19:35+0200\n"
+"PO-Revision-Date: 2021-12-09 23:44-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/reference/datamodel.rst:6
 msgid "Data model"
@@ -987,7 +988,6 @@ msgid ":attr:`__annotations__`"
 msgstr ":attr:`__annotations__`"
 
 #: ../Doc/reference/datamodel.rst:551
-#, fuzzy
 msgid ""
 "A dict containing annotations of parameters.  The keys of the dict are the "
 "parameter names, and ``'return'`` for the return annotation, if provided.  "
@@ -996,7 +996,8 @@ msgid ""
 msgstr ""
 "Un diccionario que contiene anotaciones de parámetros. Las claves del dict "
 "son los nombres de los parámetros, y ``'return'`` para la anotación de "
-"retorno, si se proporciona."
+"retorno, si se proporciona. Para más información sobre trabajar con este "
+"atributo, ve :ref:`annotations-howto`."
 
 #: ../Doc/reference/datamodel.rst:561
 msgid ":attr:`__kwdefaults__`"
@@ -1365,31 +1366,25 @@ msgstr ""
 "del módulo, p. ej., ``m.x = 1`` es equivalente a ``m.__dict__[“x”] = 1``."
 
 #: ../Doc/reference/datamodel.rst:754
-#, fuzzy
 msgid "Predefined (writable) attributes:"
-msgstr "Atributos especiales:"
+msgstr "Atributos predefinidos (escribibles):"
 
 #: ../Doc/reference/datamodel.rst:757
-#, fuzzy
 msgid ":attr:`__name__`"
-msgstr ":attr:`__module__`"
+msgstr ":attr:`__name__`"
 
 #: ../Doc/reference/datamodel.rst:757
-#, fuzzy
 msgid "The module's name."
-msgstr "El nombre de la función."
+msgstr "El nombre del módulo."
 
 #: ../Doc/reference/datamodel.rst:760
-#, fuzzy
 msgid "The module's documentation string, or ``None`` if unavailable."
 msgstr ""
-"El texto de documentación de la función, o ``None`` si no está disponible; "
-"no heredado por subclases."
+"El texto de documentación del módulo, o ``None`` si no está disponible."
 
 #: ../Doc/reference/datamodel.rst:770
-#, fuzzy
 msgid ":attr:`__file__`"
-msgstr ":attr:`__module__`"
+msgstr ":attr:`__file__`"
 
 #: ../Doc/reference/datamodel.rst:764
 msgid ""
@@ -1399,6 +1394,12 @@ msgid ""
 "interpreter.  For extension modules loaded dynamically from a shared "
 "library, it's the pathname of the shared library file."
 msgstr ""
+"El nombre de ruta del archivo desde el que se cargó el módulo, si se cargó "
+"desde un archivo. El atributo :attr:`__file__` puede faltar para ciertos "
+"tipos de módulos, como los módulos C que están vinculados estáticamente al "
+"intérprete. Para los módulos de extensión cargados dinámicamente desde una "
+"biblioteca compartida, es el nombre de ruta del archivo de la biblioteca "
+"compartida."
 
 #: ../Doc/reference/datamodel.rst:773
 msgid ""
@@ -1406,6 +1407,10 @@ msgid ""
 "collected during module body execution.  For best practices on working with :"
 "attr:`__annotations__`, please see :ref:`annotations-howto`."
 msgstr ""
+"Un diccionario que contiene el :term:`variable annotations <variable "
+"annotation>` recopilados durante la ejecución del cuerpo del módulo. Para "
+"buenas prácticas sobre trabajar con :attr:`__annotations__`, por favor ve :"
+"ref:`annotations-howto`."
 
 #: ../Doc/reference/datamodel.rst:780
 msgid ""
@@ -1497,44 +1502,37 @@ msgstr ""
 "instancia de clase (ver a continuación)."
 
 #: ../Doc/reference/datamodel.rst:843
-#, fuzzy
 msgid ":attr:`~definition.__name__`"
-msgstr ":attr:`~definition.\\ __name__`"
+msgstr ":attr:`~definition.__name__`"
 
 #: ../Doc/reference/datamodel.rst:843
-#, fuzzy
 msgid "The class name."
-msgstr "Preparando el espacio de nombres de la clase"
+msgstr "El nombre de la clase."
 
 #: ../Doc/reference/datamodel.rst:846
-#, fuzzy
 msgid "The name of the module in which the class was defined."
-msgstr ""
-"El nombre del módulo en el que se definió la función, o ``None`` si no está "
-"disponible."
+msgstr "El nombre del módulo en el que se definió la clase."
 
 #: ../Doc/reference/datamodel.rst:849
-#, fuzzy
 msgid "The dictionary containing the class's namespace."
-msgstr "Preparando el espacio de nombres de la clase"
+msgstr "El diccionario conteniendo el espacio de nombres de la clase."
 
 #: ../Doc/reference/datamodel.rst:853
-#, fuzzy
 msgid ":attr:`~class.__bases__`"
-msgstr ":attr:`__globals__`"
+msgstr ":attr:`~class.__bases__`"
 
 #: ../Doc/reference/datamodel.rst:852
 msgid ""
 "A tuple containing the base classes, in the order of their occurrence in the "
 "base class list."
 msgstr ""
+"Una tupla conteniendo las clases de base, en orden de ocurrencia en la lista "
+"de clase base."
 
 #: ../Doc/reference/datamodel.rst:856
-#, fuzzy
 msgid "The class's documentation string, or ``None`` if undefined."
 msgstr ""
-"El texto de documentación de la función, o ``None`` si no está disponible; "
-"no heredado por subclases."
+"El texto de documentación de la clase, o ``None`` si no está disponible."
 
 #: ../Doc/reference/datamodel.rst:859
 msgid ""
@@ -1542,6 +1540,10 @@ msgid ""
 "collected during class body execution.  For best practices on working with :"
 "attr:`__annotations__`, please see :ref:`annotations-howto`."
 msgstr ""
+"Un diccionario conteniendo el :term:`variable annotations <variable "
+"annotation>` recopilados durante la ejecución del cuerpo de la clase. Para "
+"buenas prácticas sobre trabajar con :attr:`__annotations__`, por favor ve :"
+"ref:`annotations-howto`."
 
 #: ../Doc/reference/datamodel.rst:906
 msgid "Class instances"
@@ -1801,13 +1803,12 @@ msgstr ""
 "de bytecode del objeto de código)."
 
 #: ../Doc/reference/datamodel.rst:1040
-#, fuzzy
 msgid ""
 "Accessing ``f_code`` raises an :ref:`auditing event <auditing>` ``object."
 "__getattr__`` with arguments ``obj`` and ``\"f_code\"``."
 msgstr ""
-"Lanza un :ref:`evento de auditoría <auditing>` ``object.__getattr__`` con "
-"argumentos ``obj``, ``name``."
+"Acceder a ``f_code`` lanza un objeto :ref:`evento de auditoría <auditing>` "
+"``.__getattr__`` con argumentos ``obj`` y ``\"f_code\"`` ."
 
 #: ../Doc/reference/datamodel.rst:1049
 msgid ""
@@ -1940,13 +1941,12 @@ msgstr ""
 "correspondiente o con una cláusula *finally*."
 
 #: ../Doc/reference/datamodel.rst:1127
-#, fuzzy
 msgid ""
 "Accessing ``tb_frame`` raises an :ref:`auditing event <auditing>` ``object."
 "__getattr__`` with arguments ``obj`` and ``\"tb_frame\"``."
 msgstr ""
-"Lanza un :ref:`evento de auditoría <auditing>` ``object.__getattr__`` con "
-"argumentos ``obj``, ``name``."
+"Acceder a ``tb_frame`` lanza un objeto :ref:`evento de auditoría <auditing>` "
+"``.__getattr__`` con argumentos ``obj`` y ``tb_frame``."
 
 #: ../Doc/reference/datamodel.rst:1133
 msgid ""
@@ -2016,7 +2016,6 @@ msgid "Static method objects"
 msgstr "Objetos de método estático"
 
 #: ../Doc/reference/datamodel.rst:1168
-#, fuzzy
 msgid ""
 "Static method objects provide a way of defeating the transformation of "
 "function objects to method objects described above. A static method object "
@@ -2032,10 +2031,9 @@ msgstr ""
 "objeto, usualmente un objeto de método definido por usuario. Cuando un "
 "objeto de método estático es obtenido desde una clase o una instancia de "
 "clase, usualmente el objeto retornado es el objeto envuelto, el cual no está "
-"objeto a ninguna transformación adicional. Los objetos de método estático no "
-"pueden ser llamados, aunque generalmente los objetos que estos envuelven sí. "
-"Los objetos de método estático son creados por el constructor incorporado :"
-"func:`staticmethod`."
+"objeto a ninguna transformación adicional. Los objetos de método estático "
+"también pueden ser llamados. Los objetos de método estático son creados por "
+"el constructor incorporado :func:`staticmethod`."
 
 #: ../Doc/reference/datamodel.rst:1182
 msgid "Class method objects"
@@ -2151,7 +2149,6 @@ msgstr ""
 "instancia como necesaria antes de retornarla."
 
 #: ../Doc/reference/datamodel.rst:1238
-#, fuzzy
 msgid ""
 "If :meth:`__new__` is invoked during object construction and it returns an "
 "instance of *cls*, then the new instance’s :meth:`__init__` method will be "
@@ -2160,10 +2157,10 @@ msgid ""
 "constructor."
 msgstr ""
 "Si :meth:`__new__` es invocado durante la construcción del objeto y éste "
-"retorna una instancia o subclase de *cls*, entonces el nuevo método :meth:"
-"`__init__` de la instancia será invocado como ``__init__(self[, …])``, donde "
-"*self* es la nueva instancia y los argumentos restantes son iguales como "
-"fueron pasados hacia el constructor de objetos."
+"retorna una instancia de *cls*, entonces el nuevo método :meth:`__init__` de "
+"la instancia será invocado como ``__init__(self[, …])``, donde *self* es la "
+"nueva instancia y los argumentos restantes son iguales a como fueron pasados "
+"hacia el constructor de objetos."
 
 #: ../Doc/reference/datamodel.rst:1243
 msgid ""
@@ -2634,7 +2631,6 @@ msgstr ""
 "invocaciones repetidas de Python."
 
 #: ../Doc/reference/datamodel.rst:1524
-#, fuzzy
 msgid ""
 "This is intended to provide protection against a denial-of-service caused by "
 "carefully-chosen inputs that exploit the worst case performance of a dict "
@@ -2643,8 +2639,9 @@ msgid ""
 msgstr ""
 "Esto tiene la intención de proveer protección contra una negación de "
 "servicio causada por entradas cautelosamente elegidas y que explotan el peor "
-"caso de rendimiento en la inserción de un diccionario, complejidad O(n^2). "
-"Ver http://www.ocert.org/advisories/ocert-2011-003.html para más detalles."
+"caso de rendimiento en la inserción de un diccionario, complejidad O(n\\ :"
+"sup:`2`). Ver http://www.ocert.org/advisories/ocert-2011-003.html para más "
+"detalles."
 
 #: ../Doc/reference/datamodel.rst:1529
 msgid ""
@@ -3136,7 +3133,6 @@ msgstr ""
 "__dict__[‘m’].__get__(obj, obj.__class__)``."
 
 #: ../Doc/reference/datamodel.rst:1791
-#, fuzzy
 msgid ""
 "For instance bindings, the precedence of descriptor invocation depends on "
 "which descriptor methods are defined.  A descriptor can define any "
@@ -3159,10 +3155,10 @@ msgstr ""
 "retornará el objeto de descriptor a menos que exista un valor en el "
 "diccionario de instancias del objeto. Si el descriptor define :meth:"
 "`__set__` y/o :meth:`__delete__`, es un descriptor de datos; si no define "
-"alguno, es un descriptor sin datos. Normalmente los descriptores de datos "
+"ninguno, es un descriptor sin datos. Normalmente los descriptores de datos "
 "definen ambos :meth:`__get__` y :meth:`__set__`, mientras que los "
 "descriptores sin datos solo tienen el método :meth:`__get__`. Descriptores "
-"de datos con :meth:`__set__` y :meth:`__get__` (o :meth:`__delete__`) "
+"de datos con :meth:`__set__` y :meth:`__get__` (y/o :meth:`__delete__`) "
 "definidos siempre anulan una re-definición en el diccionario de instancias. "
 "Por el contrario, los descriptores sin datos pueden ser anulados por "
 "instancias."
@@ -3422,15 +3418,17 @@ msgid ""
 "When a class is created, :meth:`type.__new__` scans the class variables and "
 "makes callbacks to those with a :meth:`__set_name__` hook."
 msgstr ""
+"Cuando se crea una clase, :meth:`type.__new__` escanea las variables de "
+"clase y realiza retornos de llamada a aquellas con un gancho :meth:"
+"`__set_name__`."
 
 #: ../Doc/reference/datamodel.rst:1935
-#, fuzzy
 msgid ""
 "Automatically called at the time the owning class *owner* is created. The "
 "object has been assigned to *name* in that class::"
 msgstr ""
-"Es llamado al momento en el que se crea la clase propietaria *owner*. El "
-"descriptor es asignado a *name*."
+"Llamado automáticamente al momento en el que se crea la clase propietaria "
+"*owner*. El objeto es asignado a *name* en esa clase::"
 
 #: ../Doc/reference/datamodel.rst:1941
 msgid ""
@@ -3438,6 +3436,9 @@ msgid ""
 "`__set_name__` will not be called automatically. If needed, :meth:"
 "`__set_name__` can be called directly::"
 msgstr ""
+"Si la variable de clase se asigna después de crear la clase, :meth:"
+"`__set_name__` no se llamará automáticamente. Si es necesario, :meth:"
+"`__set_name__` se puede llamar directamente::"
 
 #: ../Doc/reference/datamodel.rst:1952
 msgid "See :ref:`class-object-creation` for more details."
@@ -3695,42 +3696,38 @@ msgstr ""
 "exc:`RuntimeError` en Python 3.8."
 
 #: ../Doc/reference/datamodel.rst:2105
-#, fuzzy
 msgid ""
 "When using the default metaclass :class:`type`, or any metaclass that "
 "ultimately calls ``type.__new__``, the following additional customization "
 "steps are invoked after creating the class object:"
 msgstr ""
-"Cuando se utiliza la metaclase por defecto :class:`type`, o cualquier otra "
+"Cuando se utiliza la metaclase por defecto :class:`type`, o cualquier "
 "metaclase que finalmente llama a ``type.__new__``, los siguientes pasos de "
 "personalización adicional son invocados después de crear el objeto de clase:"
 
 #: ../Doc/reference/datamodel.rst:2109
-#, fuzzy
 msgid ""
 "The ``type.__new__`` method collects all of the attributes in the class "
 "namespace that define a :meth:`~object.__set_name__` method;"
 msgstr ""
-"primero, ``type.__new__`` recolecta todos los descriptores en el espacio de "
+"El método ``type.__new__`` recolecta todos los atributos en el espacio de "
 "nombres de la clase que definen un método :meth:`~object.__set_name__`;"
 
 #: ../Doc/reference/datamodel.rst:2111
-#, fuzzy
 msgid ""
 "Those ``__set_name__`` methods are called with the class being defined and "
 "the assigned name of that particular attribute;"
 msgstr ""
-"segundo, todos esos métodos ``__set_name__`` son llamados con la clase "
-"definida y el nombre de un descriptor particular asignado;"
+"Esos métodos ``__set_name__`` son llamados con la clase siendo definida y el "
+"nombre de ese atributo particular asignado;"
 
 #: ../Doc/reference/datamodel.rst:2113
-#, fuzzy
 msgid ""
 "The :meth:`~object.__init_subclass__` hook is called on the immediate parent "
 "of the new class in its method resolution order."
 msgstr ""
-"finalmente, el enlace :meth:`~object.__init_subclass__` llama al padre "
-"inmediato de la nueva clase en su orden de resolución del método."
+"El gancho :meth:`~object.__init_subclass__` llama al padre inmediato de la "
+"nueva clase en su orden de resolución del método."
 
 #: ../Doc/reference/datamodel.rst:2116
 msgid ""
@@ -4457,6 +4454,8 @@ msgstr ""
 #: ../Doc/reference/datamodel.rst:2601
 msgid "Customizing positional arguments in class pattern matching"
 msgstr ""
+"Personalización de argumentos posicionales en la coincidencia de patrones de "
+"clase"
 
 #: ../Doc/reference/datamodel.rst:2603
 msgid ""
@@ -4465,6 +4464,11 @@ msgid ""
 "without special support in ``MyClass``. To be able to use that kind of "
 "patterns, the class needs to define a *__match_args__* attribute."
 msgstr ""
+"Cuando se usa un nombre de clase en un patrón, los argumentos posicionales "
+"en el patrón no están permitidos de forma predeterminada, es decir, ``case "
+"MyClass(x, y)`` generalmente no es válido sin soporte especial en "
+"``MyClass``. Para poder usar ese tipo de patrones, la clase necesita definir "
+"un atributo *__match_args__*."
 
 #: ../Doc/reference/datamodel.rst:2610
 msgid ""
@@ -4474,6 +4478,11 @@ msgid ""
 "*__match_args__* as the keyword. The absence of this attribute is equivalent "
 "to setting it to ``()``."
 msgstr ""
+"A esta variable de clase se le puede asignar una tupla de cadenas. Cuando "
+"esta clase se utiliza en un patrón de clase con argumentos posicionales, "
+"cada argumento posicional se convertirá en un argumento de palabra clave, "
+"utilizando el valor correspondiente en *__match_args__* como palabra clave. "
+"La ausencia de este atributo es equivalente a establecerlo en ``()``."
 
 #: ../Doc/reference/datamodel.rst:2616
 msgid ""
@@ -4484,17 +4493,20 @@ msgid ""
 "*__match_args__*; if it is larger, the pattern match attempt will raise a :"
 "exc:`TypeError`."
 msgstr ""
+"Por ejemplo, si ``MyClass.__match_args__`` es ``(\"left\", \"center\", "
+"\"right\")`` eso significa que ``case MyClass(x, y)`` es equivalente a "
+"``case MyClass(left=x, center=y)``. Ten en cuenta que el número de "
+"argumentos en el patrón debe ser menor o igual que el número de elementos en "
+"*__match_args__*; si es más grande, el intento de coincidencia de patrón "
+"producirá un :exc:`TypeError`."
 
 #: ../Doc/reference/datamodel.rst:2626
 msgid ":pep:`634` - Structural Pattern Matching"
-msgstr ""
+msgstr ":pep:`634` - Coincidencia de patrones estructurales"
 
 #: ../Doc/reference/datamodel.rst:2627
-#, fuzzy
 msgid "The specification for the Python ``match`` statement."
-msgstr ""
-"La especificación, el antecedente, y los ejemplos para la declaración de "
-"Python :keyword:`with`."
+msgstr "La especificación para la declaración ``match`` de Python."
 
 #: ../Doc/reference/datamodel.rst:2633
 msgid "Special method lookup"
