Apply suggestions from code review
Co-authored-by: rtobar <rtobar@icrar.org>

--- a/tutorial/interpreter.po
+++ b/tutorial/interpreter.po
@@ -63,7 +63,7 @@ msgid ""
 msgstr ""
 "En máquinas con Windows en las que haya instalado Python desde :ref:"
 "`Microsoft Store <windows-store>`, el comando :file:`python3.10` estará "
-"disponible. Si tiene :ref:`py.exe launcher <launcher>` instalado, puede usar "
+"disponible. Si tiene el :ref:`lanzador py.exe <launcher>` instalado, puede usar "
 "el comando :file:`py`. Consulte :ref:`setting-envvars` para conocer otras "
 "formas de iniciar Python."
 
