--- a/tutorial/venv.po
+++ b/tutorial/venv.po
@@ -180,8 +180,8 @@ msgid ""
 "Package Index, <https://pypi.org>.  You can browse the Python Package Index "
 "by going to it in your web browser."
 msgstr ""
-"Puede instalar, actualizar y eliminar paquetes usando un programa llamado: "
-"programa: `pip`. De forma predeterminada, ``pip`` instalará paquetes del "
+"Puede instalar, actualizar y eliminar paquetes usando un programa llamado :"
+"program:`pip`. De forma predeterminada, ``pip`` instalará paquetes del "
 "índice de paquetes de Python, <https://pypi.org>. Puede navegar por el "
 "índice de paquetes de Python yendo a él en su navegador web."
 
@@ -191,7 +191,7 @@ msgid ""
 "etc.  (Consult the :ref:`installing-index` guide for complete documentation "
 "for ``pip``.)"
 msgstr ""
-"``pip`` tiene varios subcomandos: \"instalar\", \"desinstalar\", \"congelar"
+"``pip`` tiene varios subcomandos: \"install\", \"uninstall\", \"freeze"
 "\", etc. (Consulte la guía :ref:`installing-index` para obtener la "
 "documentación completa de ``pip``)."
 
