--- a/using/mac.po
+++ b/using/mac.po
@@ -22,9 +22,8 @@ msgstr ""
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/using/mac.rst:6
-#, fuzzy
 msgid "Using Python on a Mac"
-msgstr "Usando Python en una Macintosh"
+msgstr "Usando Python en una Mac"
 
 #: ../Doc/using/mac.rst
 msgid "Author"
@@ -35,14 +34,13 @@ msgid "Bob Savage <bobsavage@mac.com>"
 msgstr "Bob Savage <bobsavage@mac.com>"
 
 #: ../Doc/using/mac.rst:11
-#, fuzzy
 msgid ""
 "Python on a Mac running macOS is in principle very similar to Python on any "
 "other Unix platform, but there are a number of additional features such as "
 "the IDE and the Package Manager that are worth pointing out."
 msgstr ""
-"Python en una Macintosh con Mac OS X es, en principio, muy similar a Python "
-"en cualquier otra plataforma Unix, pero hay una serie de características "
+"Python en una Mac corriendo macOS es, en principio, muy similar a Python en "
+"cualquier otra plataforma Unix, pero hay una serie de características "
 "adicionales como el IDE y el Administrador de paquetes que vale la pena "
 "resaltar."
 
@@ -51,7 +49,6 @@ msgid "Getting and Installing MacPython"
 msgstr "Obteniendo e instalando MacPython"
 
 #: ../Doc/using/mac.rst:20
-#, fuzzy
 msgid ""
 "macOS since version 10.8 comes with Python 2.7 pre-installed by Apple.  If "
 "you wish, you are invited to install the most recent version of Python 3 "
@@ -59,11 +56,11 @@ msgid ""
 "binary\" build of Python, which runs natively on the Mac's new Intel and "
 "legacy PPC CPU's, is available there."
 msgstr ""
-"Mac OS X 10.8 viene con Python 2.7 preinstalado por Apple. Si lo desea, está "
-"invitado a instalar la versión más reciente de Python 3 desde el sitio web "
-"de Python (https://www.python.org). Allí está disponible una versión actual "
-"“binaria universal” de Python, que se ejecuta de forma nativa en las nuevas "
-"CPU Intel y PPC heredadas de Mac."
+"macOS desde la versión 10.8 viene con Python 2.7 preinstalado por Apple. Si "
+"lo desea, está invitado a instalar la versión más reciente de Python 3 desde "
+"el sitio web de Python (https://www.python.org). Allí está disponible una "
+"versión actual “binaria universal” de Python, que se ejecuta de forma nativa "
+"en las nuevas CPU Intel y PPC heredadas de Mac."
 
 #: ../Doc/using/mac.rst:26
 msgid "What you get after installing is a number of things:"
@@ -136,18 +133,16 @@ msgid "How to run a Python script"
 msgstr "Cómo ejecutar un *script* de Python"
 
 #: ../Doc/using/mac.rst:57
-#, fuzzy
 msgid ""
 "Your best way to get started with Python on macOS is through the IDLE "
 "integrated development environment, see section :ref:`ide` and use the Help "
 "menu when the IDE is running."
 msgstr ""
-"Su mejor manera de comenzar a usar Python en Mac OS X es a través del "
-"entorno de desarrollo integrado IDLE, consulte la sección :ref:`ide` y use "
-"el menú Ayuda cuando se ejecute el IDE."
+"Su mejor manera de comenzar a usar Python en macOS es a través del entorno "
+"de desarrollo integrado IDLE, consulte la sección :ref:`ide` y use el menú "
+"Ayuda cuando se ejecute el IDE."
 
 #: ../Doc/using/mac.rst:61
-#, fuzzy
 msgid ""
 "If you want to run Python scripts from the Terminal window command line or "
 "from the Finder you first need an editor to create your script. macOS comes "
@@ -161,11 +156,11 @@ msgid ""
 msgstr ""
 "Si desea ejecutar scripts de Python desde la línea de comandos de la ventana "
 "de Terminal o desde Finder, primero necesita un editor para crear su script. "
-"Mac OS X viene con una serie de editores de línea de comandos estándar de "
+"macOS viene con una serie de editores de línea de comandos estándar de "
 "Unix, :program:`vim` y :program:`emacs` entre ellos. Si desea un editor más "
 "parecido a Mac, :program:`BBEdit` o :program:`TextWrangler` de Bare Bones "
 "Software (consulte http://www.barebones.com/products/bbedit/index.html) son "
-"buenas opciones , ya que son :program:`TextMate` (consulte https://"
+"buenas opciones , como lo es :program:`TextMate` (consulte https://"
 "macromates.com/). Otros editores incluyen :program:`Gvim` (http://macvim-dev."
 "github.io/macvim/) y :program:`Aquamacs` (http://aquamacs.org/)."
 
@@ -206,17 +201,16 @@ msgid "Running scripts with a GUI"
 msgstr "Ejecutar scripts con una GUI"
 
 #: ../Doc/using/mac.rst:90
-#, fuzzy
 msgid ""
 "With older versions of Python, there is one macOS quirk that you need to be "
 "aware of: programs that talk to the Aqua window manager (in other words, "
 "anything that has a GUI) need to be run in a special way. Use :program:"
 "`pythonw` instead of :program:`python` to start such scripts."
 msgstr ""
-"Con versiones anteriores de Python, hay una peculiaridad de Mac OS X que "
-"debe conocer: los programas que hablan con el administrador de ventanas Aqua "
-"(en otras palabras, cualquier cosa que tenga una GUI) deben ejecutarse de "
-"una manera especial. Use :program:`pythonw` en vez de :program:`python` para "
+"Con versiones anteriores de Python, hay una peculiaridad de macOS que debe "
+"conocer: los programas que hablan con el administrador de ventanas Aqua (en "
+"otras palabras, cualquier cosa que tenga una GUI) deben ejecutarse de una "
+"manera especial. Use :program:`pythonw` en vez de :program:`python` para "
 "comenzar tales scripts."
 
 #: ../Doc/using/mac.rst:95
@@ -231,7 +225,6 @@ msgid "Configuration"
 msgstr "Configuración"
 
 #: ../Doc/using/mac.rst:101
-#, fuzzy
 msgid ""
 "Python on macOS honors all standard Unix environment variables such as :"
 "envvar:`PYTHONPATH`, but setting these variables for programs started from "
@@ -239,8 +232,8 @@ msgid ""
 "or :file:`.cshrc` at startup. You need to create a file :file:`~/.MacOSX/"
 "environment.plist`. See Apple's Technical Document QA1067 for details."
 msgstr ""
-"Python en OS X respeta todas las variables de entorno estándar de Unix como :"
-"envvar:`PYTHONPATH`, pero configurar estas variables para programas "
+"Python en macOS respeta todas las variables de entorno estándar de Unix "
+"como :envvar:`PYTHONPATH`, pero configurar estas variables para programas "
 "iniciados desde el Finder no es estándar ya que Finder no lee su :file:`."
 "profile` o :file:`.cshrc` al arranque. Usted necesita crear un nuevo "
 "archivo :file:`~/.MacOSX/environment.plist`. Consulte el documento técnico "
@@ -326,25 +319,23 @@ msgstr ""
 "incorporar desde la fuente."
 
 #: ../Doc/using/mac.rst:150
-#, fuzzy
 msgid ""
 "*wxPython* is another popular cross-platform GUI toolkit that runs natively "
 "on macOS. Packages and documentation are available from https://www.wxpython."
 "org."
 msgstr ""
 "*wxPython* es otro kit de herramientas GUI multiplataforma popular que se "
-"ejecuta de forma nativa en Mac OS X. Los paquetes y la documentación están "
+"ejecuta de forma nativa en macOS. Los paquetes y la documentación están "
 "disponibles en https://www.wxpython.org."
 
 #: ../Doc/using/mac.rst:153
-#, fuzzy
 msgid ""
 "*PyQt* is another popular cross-platform GUI toolkit that runs natively on "
 "macOS. More information can be found at https://riverbankcomputing.com/"
 "software/pyqt/intro."
 msgstr ""
 "*PyQt* es otro kit de herramientas GUI multiplataforma popular que se "
-"ejecuta de forma nativa en Mac OS X. Más información podrá ser encontrada en "
+"ejecuta de forma nativa en macOS. Más información podrá ser encontrada en "
 "https://riverbankcomputing.com/software/pyqt/intro."
 
 #: ../Doc/using/mac.rst:159
@@ -384,30 +375,3 @@ msgstr "Otro recurso útil es el wiki de MacPython:"
 #: ../Doc/using/mac.rst:176
 msgid "https://wiki.python.org/moin/MacPython"
 msgstr "https://wiki.python.org/moin/MacPython"
-
-#~ msgid ""
-#~ "A :file:`Python 3.8` folder in your :file:`Applications` folder. In here "
-#~ "you find IDLE, the development environment that is a standard part of "
-#~ "official Python distributions; PythonLauncher, which handles double-"
-#~ "clicking Python scripts from the Finder; and the \"Build Applet\" tool, "
-#~ "which allows you to package Python scripts as standalone applications on "
-#~ "your system."
-#~ msgstr ""
-#~ "Una carpeta :file:`Python 3.8` en su carpeta :file:`Aplicaciones`. Aquí "
-#~ "encontrará IDLE, el entorno de desarrollo que es una parte estándar de "
-#~ "las distribuciones oficiales de Python; PythonLauncher, el cual maneja "
-#~ "hacer doble clic en los scripts de Python desde el Finder; y la "
-#~ "herramienta “Build Applet”, que le permite empaquetar scripts de Python "
-#~ "como aplicaciones independientes en su sistema."
-
-#~ msgid ""
-#~ "The \"Build Applet\" tool that is placed in the MacPython 3.6 folder is "
-#~ "fine for packaging small Python scripts on your own machine to run as a "
-#~ "standard Mac application. This tool, however, is not robust enough to "
-#~ "distribute Python applications to other users."
-#~ msgstr ""
-#~ "La herramienta \\”Build Applet\\” que se coloca en la carpeta MacPython "
-#~ "3.6 está bien para empaquetar pequeños scripts de Python en su propia "
-#~ "máquina para que se ejecuten como una aplicación estándar de Mac. Sin "
-#~ "embargo, esta herramienta no es lo suficientemente robusta como para "
-#~ "distribuir aplicaciones Python a otros usuarios."
