Apply suggestions from code review
Co-authored-by: rtobar <rtobar@icrar.org>

--- a/using/mac.po
+++ b/using/mac.po
@@ -157,12 +157,12 @@ msgstr ""
 "Si desea ejecutar scripts de Python desde la línea de comandos de la ventana "
 "de Terminal o desde el Finder, primero necesita un editor para crear su "
 "script. macOS viene con varios editores de línea de comandos estándar de "
-"Unix, entre ellos: program: `vim` y: program:` emacs`. Si desea un editor "
-"más parecido a Mac,: program: `BBEdit` o: program:` TextWrangler` de Bare "
+"Unix, entre ellos :program:`vim` y :program:`emacs`. Si desea un editor "
+"más parecido a Mac, :program:`BBEdit` o :program:`TextWrangler` de Bare "
 "Bones Software (consulte http://www.barebones.com/products/bbedit/index."
-"html) son buenas opciones , como está: programa: `TextMate` (ver https://"
-"macromates.com/). Otros editores incluyen: programa: `Gvim` (http://macvim-"
-"dev.github.io/macvim/) y: programa:` Aquamacs` (http://aquamacs.org/)."
+"html) son buenas opciones , como también lo es :program:`TextMate` (ver https://"
+"macromates.com/). Otros editores incluyen :program:`Gvim` (http://macvim-"
+"dev.github.io/macvim/) y :program:`Aquamacs` (http://aquamacs.org/)."
 
 #: ../Doc/using/mac.rst:71
 msgid ""
@@ -210,8 +210,8 @@ msgstr ""
 "Con las versiones anteriores de Python, hay una peculiaridad de macOS que "
 "debe tener en cuenta: los programas que se comunican con el administrador de "
 "ventanas Aqua (en otras palabras, cualquier cosa que tenga una GUI) deben "
-"ejecutarse de una manera especial. Utilice: programa: `pythonw` en lugar de: "
-"programa:` python` para iniciar dichos scripts."
+"ejecutarse de una manera especial. Utilice :program:`pythonw` en lugar de "
+":program:`python` para iniciar dichos scripts."
 
 #: ../Doc/using/mac.rst:95
 msgid ""
