--- a/tutorial/venv.po
+++ b/tutorial/venv.po
@@ -191,9 +191,9 @@ msgid ""
 "etc.  (Consult the :ref:`installing-index` guide for complete documentation "
 "for ``pip``.)"
 msgstr ""
-"``pip`` tiene varios subcomandos: \"install\", \"uninstall\", \"freeze"
-"\", etc. (Consulte la guía :ref:`installing-index` para obtener la "
-"documentación completa de ``pip``)."
+"``pip`` tiene varios subcomandos: \"install\", \"uninstall\", \"freeze\", "
+"etc. (Consulte la guía :ref:`installing-index` para obtener la documentación "
+"completa de ``pip``)."
 
 #: ../Doc/tutorial/venv.rst:104
 msgid ""
