--- a/using/unix.po
+++ b/using/unix.po
@@ -147,15 +147,14 @@ msgid "The build process consists of the usual commands::"
 msgstr "El proceso de construcción consta de los comandos habituales::"
 
 #: ../Doc/using/unix.rst:81
-#, fuzzy
 msgid ""
 ":ref:`Configuration options <configure-options>` and caveats for specific "
 "Unix platforms are extensively documented in the :source:`README.rst` file "
 "in the root of the Python source tree."
 msgstr ""
-"Las opciones de configuración y las advertencias para plataformas Unix "
-"específicas están ampliamente documentadas en el fichero :source:`README."
-"rst` del árbol de origen."
+":ref:`Las opciones de configuración <configure-options>` y las advertencias "
+"para plataformas Unix específicas están ampliamente documentadas en el "
+"fichero :source:`README.rst` del árbol de origen."
 
 #: ../Doc/using/unix.rst:87
 msgid ""
