--- a/faq/general.po
+++ b/faq/general.po
@@ -263,7 +263,7 @@ msgstr ""
 "procesamiento de cadenas (expresiones regulares, Unicode, cálculo de "
 "diferencias entre archivos), protocolos de Internet (HTTP, FTP, SMTP, XML-"
 "RPC, POP, IMAP, programación CGI), ingeniería de software. (pruebas "
-"unitarias, registro, creación de perfiles, análisis de código Python) e "
+"unitarias, registro, análisis de rendimiento (*profiling*), análisis de código Python) e "
 "interfaces del sistema operativo (llamadas al sistema, sistemas de archivos, "
 "sockets TCP / IP). Mire la tabla de contenido de :ref:`library-index` para "
 "tener una idea de lo que está disponible. También hay disponible una amplia "
