Apply suggestions from code review
Co-authored-by: rtobar <rtobar@icrar.org>

--- a/howto/argparse.po
+++ b/howto/argparse.po
@@ -431,7 +431,7 @@ msgid ""
 "We have introduced another action, \"count\", to count the number of "
 "occurrences of specific options."
 msgstr ""
-"Hemos introducido otra acción, \"contar\", para contar el número de "
+"Hemos introducido otra acción, \"count\", para contar el número de "
 "apariciones de opciones específicas."
 
 #: ../Doc/howto/argparse.rst:499
