--- a/howto/instrumentation.po
+++ b/howto/instrumentation.po
@@ -111,7 +111,7 @@ msgid ""
 "CPython must then be :option:`configured with the --with-dtrace option <--"
 "with-dtrace>`:"
 msgstr ""
-"CPython debe ser :option:`configured with the --with-dtrace option <--with-"
+"CPython debe ser :option:`configurado con la opción --with-dtrace <--with-"
 "dtrace>`:"
 
 #: ../Doc/howto/instrumentation.rst:56
@@ -246,7 +246,7 @@ msgstr "en su lugar debería leer:"
 
 #: ../Doc/howto/instrumentation.rst:271
 msgid "(assuming a :ref:`debug build <debug-build>` of CPython 3.6)"
-msgstr "(asumiendo un :ref:`debug build <debug-build>` de CPython 3.6)"
+msgstr "(asumiendo una :ref:`compilación de depuración <debug-build>` de CPython 3.6)"
 
 #: ../Doc/howto/instrumentation.rst:275
 msgid "Available static markers"
