--- a/howto/ipaddress.po
+++ b/howto/ipaddress.po
@@ -87,7 +87,7 @@ msgstr ""
 "direccionamiento IP, es importante saber que el Protocolo de Internet (IP) "
 "se encuentra actualmente en el proceso de pasar de la versión 4 del "
 "protocolo a la versión 6. Esta transición se produce en gran parte porque la "
-"versión 4 del El protocolo no proporciona suficientes direcciones para "
+"versión 4 del protocolo no proporciona suficientes direcciones para "
 "satisfacer las necesidades de todo el mundo, especialmente dado el creciente "
 "número de dispositivos con conexiones directas a Internet."
 
