--- a/howto/sorting.po
+++ b/howto/sorting.po
@@ -69,7 +69,7 @@ msgid ""
 "It returns a new sorted list:"
 msgstr ""
 "Una clasificación ascendente simple es muy fácil: simplemente llame a la "
-"función :func:`sorted`. Devuelve una nueva lista ordenada:"
+"función :func:`sorted`. Retorna una nueva lista ordenada:"
 
 #: ../Doc/howto/sorting.rst:28
 msgid ""
@@ -377,7 +377,7 @@ msgid ""
 "have the user supplying a comparison function and you need to convert that "
 "to a key function. The following wrapper makes that easy to do:"
 msgstr ""
-"Al migrar código de Python 2.x a 3.x, la situación puede surgir cuando el "
+"Al migrar código de Python 2.x a 3.x, puede surgir la situación de que el "
 "usuario proporciona una función de comparación y necesita convertirla en una "
 "función clave. La siguiente envoltura lo hace fácil de hacer:"
 
