--- a/howto/unicode.po
+++ b/howto/unicode.po
@@ -1080,7 +1080,7 @@ msgstr ""
 "sistema de archivos y se devolverá una lista de cadenas Unicode, mientras "
 "que pasar una ruta de bytes devolverá los nombres de archivo como bytes. Por "
 "ejemplo, suponiendo que el :term:`filesystem encoding <filesystem encoding "
-"and error handler>` predeterminado es UTF-8, ejecute el siguiente programa:"
+"and error handler>` predeterminado es UTF-8, al ejecutar el siguiente programa:"
 
 #: ../Doc/howto/unicode.rst:647
 msgid "will produce the following output:"
